[gd_scene load_steps=12 format=3 uid="uid://dn05ucbbktbtv"]

[ext_resource type="Script" path="res://enemy/guard.gd" id="1_p31my"]
[ext_resource type="PackedScene" uid="uid://2vkhkjxlo2ar" path="res://guard_model.tscn" id="3_soxfv"]
[ext_resource type="PackedScene" uid="uid://q1p6urfuuyri" path="res://enemy/cone.tscn" id="3_tnd34"]
[ext_resource type="PackedScene" uid="uid://d1xu038n6ksd0" path="res://enemy/patrol.tscn" id="4_f0sgd"]
[ext_resource type="PackedScene" uid="uid://bqq0ycg4wq2p" path="res://enemy/exclamation_point.tscn" id="5_lumfg"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_okocw"]
points = PackedVector3Array(-0.896022, -0.955907, -0.388314, 0.0286088, 0.919081, 0.0286088, 0.0572855, 0.690129, 0.143754, 0.743815, -0.952232, -0.624879, 0.18069, -0.964436, 0.964436, -0.743864, -0.952296, 0.624921, 0.896009, -0.955893, 0.388308, -0.180872, -0.9644, -0.9644, 0.964436, -0.964436, -0.18069, -0.964436, -0.964436, 0.18069, -0.0286088, 0.919081, -0.0286088, -0.388308, -0.955893, 0.896009, 0.388314, -0.955907, -0.896022, -0.659999, -0.960203, -0.720152, 0.659976, -0.960171, 0.720128, 0.0286088, 0.919081, -0.0286088, -0.0286088, 0.919081, 0.0286088, -0.180872, -0.9644, 0.9644, 0.18069, -0.964436, -0.964436, 0.964436, -0.964436, 0.18069, -0.964436, -0.964436, -0.18069, -0.388314, -0.955907, -0.896022, 0.388308, -0.955893, 0.896009, 0.896009, -0.955893, -0.388308, -0.896022, -0.955907, 0.388314, 0.515753, -0.859528, -0.773539, -0.515576, -0.859533, 0.773544, -0.773539, -0.859528, -0.515753, 0.773412, -0.859387, 0.515668, 0.515668, -0.859387, 0.773412, -0.515661, -0.859674, -0.773671, 0.659999, -0.960203, -0.720152)

[sub_resource type="BoxShape3D" id="BoxShape3D_55r74"]

[sub_resource type="Animation" id="Animation_ps450"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExclamationPoint:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_t10s3"]
resource_name = "player_spotted"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExclamationPoint:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(2.2, 2.2, 2.2), Vector3(2, 2, 2), Vector3(2, 2, 2), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExclamationPoint:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 2, 0), Vector3(0, 2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8wsic"]
_data = {
"RESET": SubResource("Animation_ps450"),
"player_spotted": SubResource("Animation_t10s3")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_rqubn"]

[node name="Guard" type="CharacterBody3D" node_paths=PackedStringArray("patrol_direction")]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_p31my")
patrol_direction = NodePath("patrol")

[node name="visuals" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="VisionArea" type="Area3D" parent="visuals"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.817536, 0)
collision_mask = 2

[node name="Cone" parent="visuals/VisionArea" instance=ExtResource("3_tnd34")]
transform = Transform3D(1.5, 0, 0, 0, -6.55671e-08, -1.5, 0, 1.5, -6.55671e-08, 0, 1.38729, -1.58247)
layers = 0

[node name="CollisionShape3D2" type="CollisionShape3D" parent="visuals/VisionArea"]
transform = Transform3D(1.5, 0, 0, 0, -6.55671e-08, -1.5, 0, 1.5, -6.55671e-08, 0, 1.38729, -1.58247)
shape = SubResource("ConvexPolygonShape3D_okocw")

[node name="Guard" parent="visuals" instance=ExtResource("3_soxfv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 1, 0)
shape = SubResource("BoxShape3D_55r74")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="patrol" parent="." instance=ExtResource("4_f0sgd")]
group_name = "Guard"

[node name="VisionTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_8wsic")
}

[node name="ExclamationPoint" parent="." instance=ExtResource("5_lumfg")]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0)

[node name="HitBox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.965615, 0)
shape = SubResource("BoxShape3D_rqubn")

[connection signal="timeout" from="VisionTimer" to="." method="_on_vision_timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="visuals/Guard"]
